# dimsum

./: BUILD.bazel  CONTRIBUTING.md  README.md  WORKSPACE  a.cc  a.pre.h  arm_impl-inl.inc  clang_integration_test.cc  dimsum.h  dimsum_fuzz.cc  dimsum_test.cc  dimsum_x86.h  dimsum_x86_test.cc  index_sequence.h  integral_types.h  lit.cfg  operations.h  port.h  ppc_impl-inl.inc  simd  simd.h  simd_avx.h  simd_neon.h  simd_simulated.h  simd_sse.h  simd_vsx.h  simulated.h  simulated_impl-inl.inc  test.sh  types.h  x86_avx_impl-inl.inc  x86_sse_impl-inl.inc
testing/: lit.cfg
testing/clang_tests/dimsum.comparison/: 128.cpp  native.cpp
testing/clang_tests/simd.binary/: 128.cpp  native.cpp
testing/clang_tests/simd.cassign/: 128.cpp  native.cpp
testing/clang_tests/simd.casts/: 128.cpp  native.cpp
testing/clang_tests/simd.copy/: 128.cpp  native.cpp
testing/clang_tests/simd.unary/: 128.cpp  native.cpp
utils/: mirror_libcxx_simd.sh
